# osdc

./: .gitignore  CLAUDE.md  PROGRESS.md  PR_DESCRIPTION.md  README.md  TODO.md  bugs.md  cleanup.md  conftest.py  feature_parity.md  multicloud.md  post-may-2026.md  post.md  progress.md  pyproject.toml  security.md
.github/workflows/: no-gitlinks.yml  publish.yml  tests.yml
admin/: README.md  generate_stats.py
admin/output/: dashboard.html
charts/gpu-dev-server/: Chart.yaml  README.md  values-aws.yaml  values-gcp.yaml  values-local.yaml  values.yaml
cli-tools/gpu-dev-cli/: README.md  minimal-iam-policy.json  pyproject.toml
cli-tools/scripts/: clear_stale_disk_locks.py
ctf-game/: README.md  docker-compose.yaml
ctf-game/k8s/: deployments.yaml  namespace.yaml  network-policy.yaml  services.yaml  workbench-template.yaml
ctf-game/scoreboard/: Dockerfile  app.py
ctf-game/scripts/: build-images.sh  cleanup.sh  create-workbench.sh  deploy-k8s.sh  reset-game.sh
ctf-game/workbench/: Dockerfile  hints.txt  motd.txt  tools.txt
docker/: try.sh
docs/: FAST_REPRO_DESIGN.md  GPU_DEV_SUBMIT.md  HELM_MIGRATION.md  LIMITATIONS.md  LOCAL_DEVELOPMENT.md  POST_DRAFT.md  REMOTE_DEPLOYMENT.md  SDK_REPRO.md  USER_GUIDE.md  k8s-direct-quickstart.md
examples/: cluster-setup.yaml  gpu-types.yaml
examples/hooks/: post-reserve.example
knowledgebase/: README.md  ami-and-bootstrap.md  architecture.md  authentication.md  cli-tool.md  gotchas.md  helm-migration.md  kubernetes.md  lambda-functions.md  monitoring.md  multi-node.md  networking.md  one-pager.md  repo-structure.md  reservation-system.md  storage.md  terraform.md  workflows-and-ci.md
local/: build-images.sh  setup.sh  teardown.sh
local/dev-pod-image/: Dockerfile
local/manifests/: api-service.yaml  ingress.yaml  namespaces.yaml  postgres.yaml  processor.yaml  rbac.yaml  schema-job.yaml
presentation/: CLAUDE.md  architecture.html  cli-demo.html  devgpu-features.html  gpu-fleet.html  index.html  k8s-under-the-hood.html  multinode.html  osdc-future-plans.html  pyproject.toml  sandbox.html  sdk-demo.html  teaser.html  thesis.html  wow.html
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: batch_multi_gpu.py  interactive_debug.py  parallel_experiments.ipynb  quickstart.ipynb  run_tests.py  submit_job.py
sdk/python/src/gpu_dev/: __init__.py
sdk/python/src/gpu_dev/_async/: __init__.py
sdk/python/src/gpu_dev/_backend/: aws.py  protocol.py
sdk/python/src/gpu_dev/_sync/: client.py  sandbox.py
sdk/python/src/gpu_dev/_transport/: ssh.py
sdk/python/src/gpu_dev/common/: config.py  enums.py  errors.py  models.py
sdk/python/tests/: test_models.py
terraform-deck/: backend.tf  main.tf  terraform.tfvars.example
terraform-gpu-devservers/: .gitignore  .terraform.lock.hcl  CLAUDE.md  DATABASE_RECREATION_GUIDE.md  DOCKER_BUILD_GUIDE.md  OPENTOFU_ONLY.md  README.md  SQL_SECURITY_PATTERNS.md  TIMEZONE_STANDARD.md  alb.tf  ami-baker.tf  api-service.tf  availability-updater-service.tf  availability.tf  build-node.tf  check-tofu.sh  check_b200.py  cloudfront.tf  cluster-autoscaler.tf  cmd_proxy.py  deck.tf  docker-build.tf  docker-certs.tf  ecr.tf  efs.tf  eks.tf  expiry.tf  git-cache.tf  git-cache.tf.disabled  git-mirror.tf  gpu-dev-pod-irsa.tf  helm-gpu-dev-server.tf  karpenter.tf  kubernetes.tf  lambda.tf  list_b200.py  main.tf  mig-config.tf  mig-parted-config.yaml  node-termination-handler.tf  (+15 more)
terraform-gpu-devservers/api-service/: .gitignore  API_ENDPOINTS_REFERENCE.md  AWS_AUTH_SUMMARY.md  CLI_INTEGRATION.md  CODE_REVIEW.md  DEPLOYMENT.md  Dockerfile  ENDPOINT_SECURITY_REVIEW.md  QUICK_DEPLOY.md  README.md  migrate_disks_dynamodb_to_postgres.py  requirements.txt  test_api.sh
terraform-gpu-devservers/availability-updater-service/: Dockerfile  README.md  requirements.txt
terraform-gpu-devservers/database/: MIGRATION_SUMMARY.md  README.md  test-schema.sh
terraform-gpu-devservers/docker/: Dockerfile  Dockerfile.runtime  bash_profile  bashrc  bashrc_ext  build-with-efa.sh  profile  shell_env  zprofile  zshrc  zshrc_ext
terraform-gpu-devservers/docker-example/: Dockerfile
terraform-gpu-devservers/migrations/: README.md  backfill_snapshot_contents.py  check_snapshots.py  populate_gpu_types.py  run_backfill.sh
terraform-gpu-devservers/providers/: __init__.py  aws.py  base.py  custom.py  gcp.py
terraform-gpu-devservers/reservation-expiry-service/: Dockerfile  README.md
terraform-gpu-devservers/reservation-processor-service/: .dockerignore  Dockerfile  README.md  requirements.txt
terraform-gpu-devservers/scripts/: b200-mig-setup.sh  verify-tofu-only.sh
terraform-gpu-devservers/shared/: DB_USAGE.md  NESTED_CONTEXT_MANAGERS.md  (+13 more)
test/: k3d-e2e.sh
tests/: README.md  __init__.py  conftest.py  requirements-test.txt
(+205 files in other folders)
