[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-dev-cli"
version = "0.3.5"
description = "CLI tool for PyTorch GPU developer server reservations"
authors = [{name = "PyTorch Team"}]
readme = "cli-tools/gpu-dev-cli/README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "questionary>=2.1.1",
    "websockets>=12.0",
    "certifi>=2023.7.22",
    "mcp>=1.0.0",
]

[project.scripts]
gpu-dev = "gpu_dev_cli.cli:main"
gpu-dev-ssh-proxy = "gpu_dev_cli.ssh_proxy:main"
gpu-dev-mcp = "gpu_dev_cli.mcp_server:main"

[tool.setuptools]
packages = ["gpu_dev_cli"]
package-dir = {"" = "cli-tools/gpu-dev-cli"}

[tool.setuptools.package-data]
gpu_dev_cli = ["py.typed"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "moto[all]>=5.0.0",
    "freezegun>=1.2.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, mocked)",
    "e2e: End-to-end tests (require AWS dev cluster)",
    "slow: Slow tests that can be skipped",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["cli-tools/gpu-dev-cli/gpu_dev_cli", "terraform-gpu-devservers/lambda"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
