[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-dev"
version = "0.7.8"
description = "CLI + Python SDK for PyTorch GPU developer server reservations"
authors = [{name = "PyTorch Team"}]
readme = "cli-tools/gpu-dev-cli/README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "questionary>=2.1.1",
    "websockets>=12.0",
    "certifi>=2023.7.22",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "moto[dynamodb,sqs,ec2]>=5.0",
    "kubernetes>=28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "sdk/python/tests"]
python_files = ["test_*.py"]
addopts = "-q -ra"
markers = [
    "integration: real-pod test on staging (cpu/t4); opt-in via --run-integration",
]

[project.scripts]
gpu-dev = "gpu_dev_cli.cli:main"
gpu-dev-ssh-proxy = "gpu_dev_cli.ssh_proxy:main"
gpu-dev-mcp = "gpu_dev_cli.mcp_server:main"

# One distribution ships BOTH the CLI (gpu_dev_cli) and the SDK (gpu_dev), from
# their two source trees, via explicit per-package dirs.
[tool.setuptools]
packages = [
    "gpu_dev_cli",
    "gpu_dev",
    "gpu_dev._async",
    "gpu_dev._backend",
    "gpu_dev._sync",
    "gpu_dev._transport",
    "gpu_dev.common",
]
package-dir = {"gpu_dev_cli" = "cli-tools/gpu-dev-cli/gpu_dev_cli", "gpu_dev" = "sdk/python/src/gpu_dev"}

[tool.setuptools.package-data]
gpu_dev = ["py.typed"]
