[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-dev-sdk"
version = "0.7.0"
description = "Python SDK for GPU development server reservations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.5.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100
